####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = install_desktop 

####### kdevelop will overwrite this part!!! (end)############

install-data-local:
	$(mkinstalldirs)  $(DESTDIR)/$(kde_datadir)/ksquirrel/desktop
	./install_desktop $(DESTDIR)/$(kde_datadir)/ksquirrel/desktop