####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = menu imageedit 

EXTRA_DIST = checker.png drag.png libs_notfound.png usual.png close.png file_first.png file_last.png flipH.png flipV.png fullscreen.png ifless.png next.png prev.png prop.png quick.png reload.png rotateL.png rotateR.png zoom100.png zoomH.png zoom-.png zoom+.png zoom_template.png zoomWH.png zoomW.png progress.png tray.png thumb_resume.png thumbs_huge.png thumbs_large.png thumbs_medium.png thumbs_small.png thumb_stop.png thumb_pending128.png thumb_pending48.png thumb_pending64.png thumb_pending96.png image_win.png cache_disk_clear.png cache_disk.png cache_mem_clear.png cache_mem.png cache_mem_view.png cache_mem_sync.png images.png anime.png mark_1.png mark_2.png mark_3.png mark_4.png cache_disk_browse.png slideshow.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/checker.png $(kde_datadir)/ksquirrel/images/checker.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/cursors/
	$(INSTALL_DATA) $(srcdir)/drag.png $(kde_datadir)/ksquirrel/cursors/drag.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/libs_notfound.png $(kde_datadir)/ksquirrel/images/libs_notfound.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/cursors/
	$(INSTALL_DATA) $(srcdir)/usual.png $(kde_datadir)/ksquirrel/cursors/usual.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/close.png $(kde_datadir)/ksquirrel/images/actions/close.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/file_first.png $(kde_datadir)/ksquirrel/images/actions/file_first.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/file_last.png $(kde_datadir)/ksquirrel/images/actions/file_last.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/flipH.png $(kde_datadir)/ksquirrel/images/actions/flipH.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/flipV.png $(kde_datadir)/ksquirrel/images/actions/flipV.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/fullscreen.png $(kde_datadir)/ksquirrel/images/actions/fullscreen.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/ifless.png $(kde_datadir)/ksquirrel/images/actions/ifless.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/next.png $(kde_datadir)/ksquirrel/images/actions/next.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/prev.png $(kde_datadir)/ksquirrel/images/actions/prev.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/prop.png $(kde_datadir)/ksquirrel/images/actions/prop.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/quick.png $(kde_datadir)/ksquirrel/images/actions/quick.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/reload.png $(kde_datadir)/ksquirrel/images/actions/reload.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/rotateL.png $(kde_datadir)/ksquirrel/images/actions/rotateL.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/rotateR.png $(kde_datadir)/ksquirrel/images/actions/rotateR.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoom100.png $(kde_datadir)/ksquirrel/images/actions/zoom100.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoomH.png $(kde_datadir)/ksquirrel/images/actions/zoomH.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoom-.png $(kde_datadir)/ksquirrel/images/actions/zoom-.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoom+.png $(kde_datadir)/ksquirrel/images/actions/zoom+.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoom_template.png $(kde_datadir)/ksquirrel/images/actions/zoom_template.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoomWH.png $(kde_datadir)/ksquirrel/images/actions/zoomWH.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoomW.png $(kde_datadir)/ksquirrel/images/actions/zoomW.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/progress.png $(kde_datadir)/ksquirrel/images/progress.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/tray.png $(kde_datadir)/ksquirrel/images/tray.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumb_resume.png $(kde_datadir)/ksquirrel/images/thumbs/thumb_resume.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumbs_huge.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_huge.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumbs_large.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_large.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumbs_medium.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_medium.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumbs_small.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_small.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumb_stop.png $(kde_datadir)/ksquirrel/images/thumbs/thumb_stop.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumb_pending128.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_pending128.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumb_pending48.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_pending48.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumb_pending64.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_pending64.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumb_pending96.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_pending96.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/listbox/
	$(INSTALL_DATA) $(srcdir)/image_win.png $(kde_datadir)/ksquirrel/images/listbox/image_win.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/cache_disk_clear.png $(kde_datadir)/ksquirrel/images/cache_disk_clear.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/cache_disk.png $(kde_datadir)/ksquirrel/images/cache_disk.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/cache_mem_clear.png $(kde_datadir)/ksquirrel/images/cache_mem_clear.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/cache_mem.png $(kde_datadir)/ksquirrel/images/cache_mem.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/cache_mem_view.png $(kde_datadir)/ksquirrel/images/cache_mem_view.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/cache_mem_sync.png $(kde_datadir)/ksquirrel/images/cache_mem_sync.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/images.png $(kde_datadir)/ksquirrel/images/actions/images.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/anime.png $(kde_datadir)/ksquirrel/images/anime.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/marks/
	$(INSTALL_DATA) $(srcdir)/mark_1.png $(kde_datadir)/ksquirrel/images/marks/mark_1.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/marks/
	$(INSTALL_DATA) $(srcdir)/mark_2.png $(kde_datadir)/ksquirrel/images/marks/mark_2.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/marks/
	$(INSTALL_DATA) $(srcdir)/mark_3.png $(kde_datadir)/ksquirrel/images/marks/mark_3.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/marks/
	$(INSTALL_DATA) $(srcdir)/mark_4.png $(kde_datadir)/ksquirrel/images/marks/mark_4.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/cache_disk_browse.png $(kde_datadir)/ksquirrel/images/cache_disk_browse.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/slideshow.png $(kde_datadir)/ksquirrel/images/actions/slideshow.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/checker.png
	-rm -f $(kde_datadir)/ksquirrel/cursors/drag.png
	-rm -f $(kde_datadir)/ksquirrel/images/libs_notfound.png
	-rm -f $(kde_datadir)/ksquirrel/cursors/usual.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/close.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/file_first.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/file_last.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/flipH.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/flipV.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/fullscreen.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/ifless.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/next.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/prev.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/prop.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/quick.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/reload.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/rotateL.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/rotateR.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoom100.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoomH.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoom-.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoom+.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoom_template.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoomWH.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoomW.png
	-rm -f $(kde_datadir)/ksquirrel/images/progress.png
	-rm -f $(kde_datadir)/ksquirrel/images/tray.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumb_resume.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_huge.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_large.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_medium.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_small.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumb_stop.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_pending128.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_pending48.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_pending64.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_pending96.png
	-rm -f $(kde_datadir)/ksquirrel/images/listbox/image_win.png
	-rm -f $(kde_datadir)/ksquirrel/images/cache_disk_clear.png
	-rm -f $(kde_datadir)/ksquirrel/images/cache_disk.png
	-rm -f $(kde_datadir)/ksquirrel/images/cache_mem_clear.png
	-rm -f $(kde_datadir)/ksquirrel/images/cache_mem.png
	-rm -f $(kde_datadir)/ksquirrel/images/cache_mem_view.png
	-rm -f $(kde_datadir)/ksquirrel/images/cache_mem_sync.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/images.png
	-rm -f $(kde_datadir)/ksquirrel/images/anime.png
	-rm -f $(kde_datadir)/ksquirrel/images/marks/mark_1.png
	-rm -f $(kde_datadir)/ksquirrel/images/marks/mark_2.png
	-rm -f $(kde_datadir)/ksquirrel/images/marks/mark_3.png
	-rm -f $(kde_datadir)/ksquirrel/images/marks/mark_4.png
	-rm -f $(kde_datadir)/ksquirrel/images/cache_disk_browse.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/slideshow.png

####### kdevelop will overwrite this part!!! (end)############
