####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = menu imageedit toolbar 

EXTRA_DIST = checker.png tray.png thumbs_huge.png thumbs_large.png thumbs_medium.png image_win.png anime.png mark_1.png mark_2.png mark_3.png mark_4.png splash.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/checker.png $(kde_datadir)/ksquirrel/images/checker.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/tray.png $(kde_datadir)/ksquirrel/images/tray.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumbs_huge.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_huge.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumbs_large.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_large.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/thumbs/
	$(INSTALL_DATA) $(srcdir)/thumbs_medium.png $(kde_datadir)/ksquirrel/images/thumbs/thumbs_medium.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/listbox/
	$(INSTALL_DATA) $(srcdir)/image_win.png $(kde_datadir)/ksquirrel/images/listbox/image_win.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/anime.png $(kde_datadir)/ksquirrel/images/anime.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/marks/
	$(INSTALL_DATA) $(srcdir)/mark_1.png $(kde_datadir)/ksquirrel/images/marks/mark_1.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/marks/
	$(INSTALL_DATA) $(srcdir)/mark_2.png $(kde_datadir)/ksquirrel/images/marks/mark_2.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/marks/
	$(INSTALL_DATA) $(srcdir)/mark_3.png $(kde_datadir)/ksquirrel/images/marks/mark_3.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/marks/
	$(INSTALL_DATA) $(srcdir)/mark_4.png $(kde_datadir)/ksquirrel/images/marks/mark_4.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/
	$(INSTALL_DATA) $(srcdir)/splash.png $(kde_datadir)/ksquirrel/images/splash.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/checker.png
	-rm -f $(kde_datadir)/ksquirrel/images/tray.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_huge.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_large.png
	-rm -f $(kde_datadir)/ksquirrel/images/thumbs/thumbs_medium.png
	-rm -f $(kde_datadir)/ksquirrel/images/listbox/image_win.png
	-rm -f $(kde_datadir)/ksquirrel/images/anime.png
	-rm -f $(kde_datadir)/ksquirrel/images/marks/mark_1.png
	-rm -f $(kde_datadir)/ksquirrel/images/marks/mark_2.png
	-rm -f $(kde_datadir)/ksquirrel/images/marks/mark_3.png
	-rm -f $(kde_datadir)/ksquirrel/images/marks/mark_4.png
	-rm -f $(kde_datadir)/ksquirrel/images/splash.png

####### kdevelop will overwrite this part!!! (end)############
