####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libimageedit.a

## INCLUDES were found outside kdevelop specific part

libimageedit_a_METASOURCES = AUTO

libimageedit_a_SOURCES = sq_writeoption.ui sq_pushbutton.cpp sq_label.cpp sq_imagefilter.ui sq_imageeditoptions.ui sq_imageconvert.ui sq_imagebcg.ui sq_converter.cpp sq_bcglabel.cpp 


EXTRA_DIST = sq_bcglabel.cpp sq_bcglabel.h sq_converter.cpp sq_converter.h sq_imagebcg.ui sq_imagebcg.ui.h sq_imageconvert.ui sq_imageconvert.ui.h sq_imageedit.h sq_imageeditoptions.ui sq_imageeditoptions.ui.h sq_imagefilter.ui sq_imagefilter.ui.h sq_label.cpp sq_label.h sq_pushbutton.cpp sq_pushbutton.h sq_writeoption.ui 

####### kdevelop will overwrite this part!!! (end)############

INCLUDES = $(all_includes) -I$(srcdir) -I$(top_srcdir)/ksquirrel
